<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="?android:attr/windowBackground"
    tools:context=".UploadActivity">

    <TextView
        android:id="@+id/categoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploading_to_community" />

    <Button
        android:id="@+id/selectFileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categoryTextView"
        android:text="@string/select_file"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/selectedFileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectFileButton"
        android:text="@string/selected_file_none"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectedFileTextView"
        android:text="@string/upload"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_marginTop="16dp" />

    <com.startapp.sdk.ads.banner.Mrec
        android:id="@+id/startioMrec"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_above="@id/startioBanner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="42dp" />

    <com.startapp.sdk.ads.banner.Banner
        android:id="@+id/startioBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
