<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/getWallpaperButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/download_wallpaper"
        android:textAppearance="?attr/textAppearanceBody1"
        app:cornerRadius="8dp"
        app:iconPadding="8dp"
        app:backgroundTint="?attr/colorPrimary"
        app:strokeColor="?attr/colorPrimaryDark"
        app:strokeWidth="1dp"
        app:iconTint="@color/white"
        app:iconGravity="textStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadWallpaperButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/getWallpaperButton"
        android:text="@string/upload_wallpaper"
        android:textAppearance="?attr/textAppearanceBody1"
        app:cornerRadius="8dp"
        app:iconPadding="8dp"
        app:backgroundTint="?attr/colorPrimary"
        app:strokeColor="?attr/colorPrimaryDark"
        app:strokeWidth="1dp"
        app:iconTint="@color/white"
        app:iconGravity="textStart" />

    <com.startapp.sdk.ads.banner.Mrec
        android:id="@+id/startioMrec"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_above="@id/startioBanner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="42dp" />

    <com.startapp.sdk.ads.banner.Banner
        android:id="@+id/startioBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
